--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@ body {
 <!------------------------------------------------------------->
 <!------------------------------------------------------------->
 <!------------------------------------------------------------->
+<!---------------------FAIXA AZUL----------------------->  
+<a href="https://santos246.github.io/INICIO/" target="_self">
+<div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+2>INÍCIO</FONT></p></div></a>
+<!------------------------------------------------------>
 <h1>MEU MEGA</h1>
 <h2>BEM VINDO</h2>
 <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
